use an android method